<resources>
    <string name="app_name">offline_answer</string>
    <string name="start">start</string>
    <string name="tutorial">遊び方</string>
    <string name="title">みんなの正解</string>
    <string name="endQuestion">回答をおわる</string>
    <string name="button">Button</string>
    <string name="answerbutton">回答</string>
    <string name="textview">TextView</string>
    <string name="time">制限時間</string>
    <string name="_3_00">3:00</string>
    <string name="question">問題</string>
    <string name="reibun">「あ」から始まる、人前でやると恥ずかしいことは？</string>
    <string name="title_activity_manage_question">ManageQuestionActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
